@@ -6,7 +6,7 @@ AC_PREREQ(2.50)
 
 
 AC_INIT(jabberd/jabberd.h)
-AM_INIT_AUTOMAKE(jabberd14,1.5.0-alpha-20060913)
+AM_INIT_AUTOMAKE(jabberd14,1.5.0-alpha-20060914)
 AM_CONFIG_HEADER(config.h)
 
 dnl version info for libraries
