@@ -1,3 +1,7 @@
+2006-09-14  Matthias Wimmer  <m@tthias.eu>
+
+    * dialback/dialback.c: initial service discovery support for dialback
+
 2006-09-13  Matthias Wimmer  <m@tthias.eu>
 
     * jsm/jsm.h: ACL support to configure admin access
